--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.13.0",
     "react-slick": "^0.31.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "swiper": "^12.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
