--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
+    "@tinymce/tinymce-react": "^6.3.0",
     "framer-motion": "^12.33.0",
     "gsap": "^3.14.2",
     "lucide-react": "^0.563.0",
@@ -20,7 +21,8 @@
     "react-router-dom": "^7.13.0",
     "react-slick": "^0.31.0",
     "slick-carousel": "^1.8.1",
-    "swiper": "^12.1.0"
+    "swiper": "^12.1.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
